# lily-ai

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260210000001_initial.sql  20260210000002_meeting_notes.sql  20260210000003_meeting_photos.sql  20260210000004_budget_settings.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/api/: analytics.rs  auth.rs  budget.rs  daily_status.rs  expenses.rs  meeting_notes.rs  meeting_photos.rs  mod.rs  users.rs
backend/src/domain/: budget.rs  expense.rs  meeting_note.rs  meeting_photo.rs  mod.rs  user.rs
backend/src/infrastructure/: budget_repo.rs  expense_repo.rs  meeting_note_repo.rs  meeting_photo_repo.rs  mod.rs  user_repo.rs
backend/src/middleware/: auth.rs
backend/src/services/: analytics_service.rs  auth_service.rs  daily_check_service.rs  expense_service.rs  meeting_service.rs  mod.rs  notification_service.rs
deployment/: docker-compose.prod.yml  docker-compose.yml
deployment/scripts/: deploy.sh  setup-db.sh
deployment/terraform/: alb.tf  cloudfront.tf  cognito.tf  ecs.tf  outputs.tf  rds.tf  sns.tf  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
web/: .env.example  Dockerfile  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: analytics.ts  auth.ts  client.ts  expenses.ts
web/src/components/: Charts.tsx  DailyReminder.tsx  ExpenseForm.tsx  ExpenseList.tsx  Layout.tsx  SummaryCard.tsx
(+97 files in other folders)
